Final do exercicio 22

--- a/ex022-imagem de fundo/fundo006.html
+++ b/ex022-imagem de fundo/fundo006.html
@@ -3,11 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo Fixo de Tela</title>
     <style>
         body{
+            height: 100vh;
+            background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
-            background-position: center center;
+            background-position: center top;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+
+            /*Shorthand - backgrouncolor > image > position > repeat > [size]
+            > attachment
+            */
         }
         main{
             background-color: aliceblue;
@@ -23,7 +32,7 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum numquam, facilis veritatis quam quaerat ipsum porro fugit officia. Quibusdam earum et saepe fugiat nemo, assumenda molestiae commodi ea non accusamus?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo consequatur enim, quasi alias, totam eaque vitae adipisci iste est et sed consectetur odio temporibus illum deserunt omnis, in corporis dolorem.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum numquam, facilis veritatis quam quaerat ipsum porro fugit officia. Quibusdam earum et saepe fugiat nemo, assumenda molestiae commodi ea non accusamus?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo consequatur enim, quasi alias, totam eaque vitae adipisci iste est et sed consectetur odio temporibus illum deserunt omnis, in corporis dolorem. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque repellendus commodi expedita ex praesentium obcaecati dolorem impedit iste! Exercitationem neque autem tempore sequi, accusamus doloribus illum sed amet rem fugit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab nemo totam sed, facilis magni commodi sapiente ipsum similique amet obcaecati, quasi omnis asperiores sit, autem quia earum dolores aperiam animi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis atque quam qui illo perspiciatis ab officiis totam quisquam mollitia. Error provident tempore voluptatum et. Aliquid tempore atque optio eligendi tenetur? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum deleniti provident libero error vero quas quasi, minima modi ab fuga repellendus quae itaque enim consectetur ea porro reprehenderit voluptates impedit?</p>
     </main>
 </body>
 </html>
