--- a/Desafios/desafio 12/index.html
+++ b/Desafios/desafio 12/index.html
@@ -88,7 +88,7 @@
         </section>
     </main>
     <footer>
-        <p id="links">Site criado por <a href="#">Gustavo Guanabara</a> para o <a href="#">CursoemVídeo</a></p>
+        <p id="links">Site criado por <a href="#" target="_blank">Gustavo Guanabara</a> para o <a href="#" target="_blank">CursoemVídeo</a></p>
     </footer>
 </body>
 </html>
