--- a/Desafios/desafio 12/index.html
+++ b/Desafios/desafio 12/index.html
@@ -8,13 +8,12 @@
 </head>
 <body>
     <header>
-        <h1 >CORDEL MODERNO</h1>
+        <h1 >Cordel Moderno</h1>
+        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
     </header>
-    <nav>
-        <p id="links">Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
-    </nav>
+
     <main>
-        <section class="conteudo" >
+        <section class="normal" >
             <p>Estou ficando cansado <br>
                 Da tal tecnologia <br>
                 Só se fala por e-mail <br>
@@ -25,8 +24,8 @@
             </p>
         </section>
 
-        <section id="caixa1">
-                <p class="conteudo_imagem">Não é mais como era antes <br>
+        <section class="imagem">
+                <p >Não é mais como era antes <br>
                     É tudo abreviado <br>
                     "Você" só tem duas letras <br> 
                     O "O" e o "E" foi riscado <br>
@@ -36,7 +35,7 @@
                 </p>
         </section>
 
-        <section class="conteudo" >
+        <section class="normal" >
             <p>Arroba agora não pesa <br>
                 É parte de um endereço <br>
                 Ponto final nem se usa <br>
@@ -56,8 +55,8 @@
             </p>
         </section>
 
-        <section id="caixa2">
-                <p class="conteudo_imagem">Tenho saudade das cartas <br>
+        <section class="imagem">
+                <p >Tenho saudade das cartas <br>
                     Escritas com a própria mão <br>
                     Mandava no mês de Junho <br>
                     Só chegava no Verão <br>
@@ -67,7 +66,7 @@
                 </p>
         </section>
 
-        <section class="conteudo">
+        <section class="normal">
             <p>Agora, escrevo e envio <br>
                 Chegando na mesma hora <br>
                 Mas quando vou prosear <br> 
