--- a/Desafios/desafio 12/index.html
+++ b/Desafios/desafio 12/index.html
@@ -24,7 +24,7 @@
             </p>
         </section>
 
-        <section class="imagem">
+        <section class="imagem" id="caixa1">
                 <p >Não é mais como era antes <br>
                     É tudo abreviado <br>
                     "Você" só tem duas letras <br> 
@@ -55,7 +55,7 @@
             </p>
         </section>
 
-        <section class="imagem">
+        <section class="imagem" id="caixa2">
                 <p >Tenho saudade das cartas <br>
                     Escritas com a própria mão <br>
                     Mandava no mês de Junho <br>
